[tool.poetry]
name = "pyromod"
version = "2.0.0"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = ["usernein"]
license = "LGPLv3+"
readme = "README.md"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
